<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Group Contact Sharing</string>
    <string name="menu_settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="store">Store</string>
    <string name="send">Send</string>
    <string name="import_">Import</string>
    <string name="join_group">Join Group</string>
    <string name="my_contact_data">My contact data</string>
    <string name="identify_group">Identify Group</string>
    <string name="identify_group_explanation">bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="phone">Phone number</string>
    <string name="everyone">Everyone</string>
    <string name="other1">Other user 1</string>
    <string name="other2">Other user 2</string>
    <string name="sample_name">Firstname Lastname</string>
    <string name="sample_email">firstname.lastname@kth.se</string>
    <string name="sample_phone">+46 543 210987</string>
    <string name="sample_facebook">Facebook: name123</string>
    <string name="title_activity_edit_data">My contact data</string>
    <string name="title_activity_identify_group">Identify Group</string>
    <string name="title_activity_select_receivers">SelectReceiversActivity</string>
    <string name="title_activity_import_data">ImportDataActivity</string>
    <string name="questionmark">"?"</string>

</resources>