<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectReceiversActivity" >

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/share"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/nameCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameTextView"
        android:layout_below="@+id/nameTextView"
        android:text="@string/everyone"
        android:checked="true" />

    <CheckBox
        android:id="@+id/emailCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameCheckBox"
        android:layout_below="@+id/nameCheckBox"
        android:text="@string/other1"
        android:checked="true" />

    <CheckBox
        android:id="@+id/phoneCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailCheckBox"
        android:layout_below="@+id/emailCheckBox"
        android:text="@string/other2"
        android:checked="true" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phoneCheckBox"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/phoneCheckBox"
        android:layout_marginRight="20dp"
        android:onClick="onSendButton_Click"
        android:text="@string/send" />

</RelativeLayout>